--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3680,53 +3680,53 @@
 \RequirePackage{geometry}
 \ifcase\ACM@format@nr
 \relax % manuscript
-   \geometry{letterpaper,head=13pt,
+   \geometry{a4paper,head=13pt,
    marginparwidth=6pc,heightrounded}%
 \or % acmsmall
    \geometry{twoside=true,
      includeheadfoot, head=13pt, foot=2pc,
-     paperwidth=6.75in, paperheight=10in,
+     paperwidth=210mm, paperheight=297mm, % a4 size
      top=58pt, bottom=44pt, inner=46pt, outer=46pt,
      marginparwidth=2pc,heightrounded
    }%
 \or % acmlarge
    \geometry{twoside=true, head=13pt, foot=2pc,
-     paperwidth=8.5in, paperheight=11in,
-     includeheadfoot,
+   paperwidth=210mm, paperheight=297mm, % a4 size
+   includeheadfoot,
      top=78pt, bottom=114pt, inner=81pt, outer=81pt,
      marginparwidth=4pc,heightrounded
      }%
 \or % acmtog
    \geometry{twoside=true, head=13pt, foot=2pc,
-     paperwidth=8.5in, paperheight=11in,
+     paperwidth=210mm, paperheight=297mm, % a4 size
      includeheadfoot, columnsep=24pt,
      top=52pt, bottom=75pt, inner=52pt, outer=52pt,
      marginparwidth=2pc,heightrounded
      }%
 \or % sigconf
    \geometry{twoside=true, head=13pt,
-     paperwidth=8.5in, paperheight=11in,
+     paperwidth=210mm, paperheight=297mm, % a4 size
      includeheadfoot, columnsep=2pc,
      top=57pt, bottom=73pt, inner=54pt, outer=54pt,
      marginparwidth=2pc,heightrounded
      }%
 \or % siggraph
    \geometry{twoside=true, head=13pt,
-     paperwidth=8.5in, paperheight=11in,
+     paperwidth=210mm, paperheight=297mm, % a4 size
      includeheadfoot, columnsep=2pc,
      top=57pt, bottom=73pt, inner=54pt, outer=54pt,
      marginparwidth=2pc,heightrounded
      }%
 \or % sigplan
    \geometry{twoside=true, head=13pt,
-     paperwidth=8.5in, paperheight=11in,
+     paperwidth=210mm, paperheight=297mm, % a4 size
      includeheadfoot=false, columnsep=2pc,
      top=1in, bottom=1in, inner=0.75in, outer=0.75in,
      marginparwidth=2pc,heightrounded
      }%
 \or % sigchi
    \geometry{twoside=true, head=13pt,
-     paperwidth=8.5in, paperheight=11in,
+     paperwidth=210mm, paperheight=297mm, % a4 size
      includeheadfoot, columnsep=2pc,
      top=66pt, bottom=73pt, inner=54pt, outer=54pt,
      marginparwidth=2pc,heightrounded
@@ -3742,7 +3742,7 @@
      \reversemarginpar
 \or % acmengage
    \geometry{twoside=true, head=13pt,
-     paperwidth=8.5in, paperheight=11in,
+     paperwidth=210mm, paperheight=297mm, % a4 size
      includeheadfoot, columnsep=2pc,
      top=57pt, bottom=73pt, inner=54pt, outer=54pt,
      marginparwidth=2pc,heightrounded
