--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -67,23 +67,22 @@
 %% the commands and values with those provided to you when you
 %% complete the rights form.
 %
-\setcopyright{acmlicensed}
-\copyrightyear{2018}
-\acmYear{2018}
-\acmDOI{XXXXXXX.XXXXXXX}
+\setcopyright{cc}
+\copyrightyear{2025}
+\acmYear{2025}
+\acmDOI{}
 %</all>
 %<*proceedings>
 %% These commands are for a PROCEEDINGS abstract or paper.
-\acmConference[Conference acronym 'XX]{Make sure to enter the correct
-  conference title from your rights confirmation email}{June 03--05,
-  2018}{Woodstock, NY}
+\acmConference[NIME '25]{International Conference on New Interfaces for Musical Expression}{June 24--27,
+  2025}{Canberra, Australia}
 %%
 %%  Uncomment \acmBooktitle if the title of the proceedings is different
 %%  from ``Proceedings of ...''!
 %%
 %%\acmBooktitle{Woodstock '18: ACM Symposium on Neural Gaze Detection,
 %%  June 03--05, 2018, Woodstock, NY} 
-\acmISBN{978-1-4503-XXXX-X/18/06}
+\acmISBN{}
 %</proceedings>
 
 %<*journal>
