--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -169,7 +169,7 @@
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{The Name of the Title Is Hope}
+\title{The NIME of the Title Is Hope}
 %<sigconf-i13n>\translatedtitle{french}{Le nom du titre est l'espoir}
 %<sigconf-i13n>\translatedtitle{german}{Der Name des Titels ist 'Hoffnung'}
 %<sigconf-i13n>\translatedtitle{spanish}{El nombre del título es esperanza}
@@ -378,9 +378,9 @@
 %% page.
 \begin{teaserfigure}
   \includegraphics[width=\textwidth]{sampleteaser}
-  \caption{Seattle Mariners at Spring Training, 2010.}
-  \Description{Enjoying the baseball game from the third-base
-  seats. Ichiro Suzuki preparing to bat.} 
+  \caption{Two synthesisers on a table, 2019.}
+  \Description{Enjoying looking at two synthesisers.
+  A Korg Monotron and a Korg Volca FM.} 
   \label{fig:teaser}
 \end{teaserfigure}
 %</sigconf|authordraft|sigplan|acmsmall-conf|sigconf-i13n>
