NIMEified an image

--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -728,11 +728,9 @@ in the example below.
 %<!sigchi-a>\begin{figure}[h]
 %<sigchi-a>\begin{marginfigure}
   \centering
-  \includegraphics[width=\linewidth]{sample-franklin}
-  \caption{1907 Franklin Model D roadster. Photograph by Harris \&
-    Ewing, Inc. [Public domain], via Wikimedia
-    Commons. (\url{https://goo.gl/VLCRBB}).}
-  \Description{A woman and a girl in white dresses sit in an open car.}
+  \includegraphics[width=\linewidth]{sample-bela}
+  \caption{A Bela board in action at a workshop (2017).}
+  \Description{Somebody manipulating sensors on a Bela board.}
 %<!sigchi-a>\end{figure}
 %<sigchi-a>\end{marginfigure}
 
