added clear information about provenance of this work and compliance with the LPPL license.

--- a/nimeart.dtx
+++ b/nimeart.dtx
@@ -1,5 +1,31 @@
 % \iffalse
 %
+% nimeart.dtx is a fork of acmart.dtx to provide specific features
+% for the NIME conference:
+%
+%   - A4 paper size
+%   - 1-column conference format based on acmsmall
+%   - sample outputs are focussed on NIME tracks
+% 
+% This derived work is distributed in compliance with the LPPL
+% (Copyright and licence information below).
+%
+% The original source can be found at:
+% https://github.com/borisveytsman/acmart
+%
+% This derived work is only useful for the NIME community. Any 
+% issues with nimeart.dtx or nimeart.cls should be flagged in this
+% repository: https://github.com/nime-conference/nimeart
+%
+% The authors of the original acmart are in no way responsible for use of 
+% nimeart.
+%
+% We thank the authors of acmart and the ACM community for their ongoing
+% contributions to academic publishing within and outside of ACM-sponsored
+% events and publications.
+%
+% Original copyright notices for acmart follow:
+%
 % Copyright 2016-2024, Association for Computing Machinery
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
@@ -14,13 +40,6 @@
 %
 % The Current Maintainer of this work is Boris Veytsman,
 % <borisv@lk.net>
-%
-% This work consists of the file nimeart.dtx, the derived file
-% nimeart.cls, the files ACM-Reference-Format.bst, and templates
-% sample-acmlarge.tex, sample-acmsmall.tex, sample-acmtog.tex,
-% samplebody-conf.tex, samplebody-journals.tex, sample-manuscript.tex,
-% sample-sigconf-authordraft.tex, sample-sigconf.tex,
-% sample-sigplan.tex
 %
 % \fi
 %
@@ -2256,7 +2275,7 @@
 %</gobble>
 %<class&!tagged>\ProvidesClass{nimeart}
 %<tagged>\ProvidesClass{nimeart-tagged}
-[2024/10/19 v2.10 Typesetting articles for the Association for Computing Machinery]
+[2024/11/20 v0.1 Typesetting articles for NIME, a fork of acmart v2.10]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
